Adds Molten Ancient Debris Adds Molten Netherite Adds Molten Gold + Molten Derbis => Molten Nethrite alloy recipe Alloying recipes can now executing up to 10x per tick